# missionplanner

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
.github/workflows/: build-and-release.yml  build-apk.yml
attached_assets/: Pasted-Project-DJI-Photogrammetry-SDK-generate-a-multi-platform-SDK-repo-and-starter-code-Goal--1759146390592_1759146390592.txt
examples/sample_dataset/: images.csv  images_processed.csv  images_processed.json  mission.json  roi.json
mobile/android-app/: gradlew  gradlew.bat  settings.gradle
mobile/android-app/app/: build.gradle  proguard-rules.pro
mobile/android-app/app/src/main/: AndroidManifest.xml
mobile/android-app/app/src/main/java/com/dji/photogrammetry/app/: App.kt  DjiSdkManager.kt  ExportActivity.kt  FlightControlActivity.kt  MainActivity.kt  MissionConverter.kt  MissionEngine.kt  MissionPlannerActivity.kt  RouteFollowActivity.kt
mobile/android-app/app/src/main/res/drawable/: bg_warning.xml
mobile/android-app/app/src/main/res/layout/: activity_export.xml  activity_flight_control.xml  activity_main.xml  activity_mission_planner.xml  activity_route_follow.xml  dialog_roi_input.xml
mobile/android-app/app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
mobile/android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/android-sdk-wrapper/: README.md  build.gradle
mobile/android-sdk-wrapper/src/main/java/com/dji/photogrammetry/: CameraTrigger.kt  DroneProfiles.kt  FollowModeController.kt  MissionPlanner.kt
processing/: pyproject.toml
processing/dji_photogrammetry/: __init__.py  camera_trigger.py  cli.py  drone_profiles.py  follow_mode.py  image_processor.py  metadata_processor.py  mission_planner.py  processing_engine.py  rtk_ppk.py
processing/dji_photogrammetry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
processing/tests/: test_drone_profiles.py  test_follow_mode.py  test_mission_planner.py  test_rtk_ppk.py
