[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dji-photogrammetry"
version = "0.1.0"
description = "DJI Photogrammetry SDK for drone survey missions with OpenDroneMap integration"
authors = [{name = "DJI Photogrammetry SDK", email = "sdk@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["drone", "photogrammetry", "dji", "mapping", "survey"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "pandas>=1.5.0",
    "pillow>=9.0.0",
    "exifread>=3.0.0",
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "pyproj>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/dji/photogrammetry-sdk"
Documentation = "https://github.com/dji/photogrammetry-sdk/docs"
Repository = "https://github.com/dji/photogrammetry-sdk"
Issues = "https://github.com/dji/photogrammetry-sdk/issues"

[project.scripts]
dji-photogrammetry = "dji_photogrammetry.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dji_photogrammetry*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true